src/test/fail/bad_anon_call.ly
<@lily 10 .@(integer) () @>
